<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the score counter. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/quidditch" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/card1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layoutMargin"
                    android:gravity="center"
                    card_view:cardCornerRadius="@dimen/cornerRadius"
                    card_view:cardElevation="@dimen/zero"
                    card_view:cardMaxElevation="@dimen/zero">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/teamImageHeight"
                        android:scaleType="fitXY"
                        android:src="@drawable/gryffindor" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layoutMargin"
                    android:layout_marginRight="@dimen/layoutMargin"
                    android:layout_marginBottom="@dimen/marginTopBottom"
                    android:gravity="center"
                    card_view:cardCornerRadius="@dimen/cornerRadius"
                    card_view:cardElevation="@dimen/zero"
                    card_view:cardMaxElevation="@dimen/zero">

                    <TextView
                        android:id="@+id/gryffindor_score"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:text="@string/score"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/scoreSize" />

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/fouls_gryffindor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginTopBottom"
                    android:layout_marginLeft="@dimen/layoutMargin"
                    android:layout_marginRight="@dimen/layoutMargin"

                    android:paddingBottom="@dimen/paddingText"
                    android:paddingTop="@dimen/paddingText"
                    android:background="@drawable/gradient"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="Fouls: "
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginTopBottom"
                    android:layout_marginLeft="@dimen/layoutMargin"
                    android:layout_marginRight="@dimen/layoutMargin"
                    android:layout_marginTop="@dimen/layoutMargin"
                    android:background="@drawable/gradient"
                    android:onClick="addSnitchForGryffindor"
                    android:text="@string/snitch"
                    android:textColor="@color/textColor" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginTopBottom"
                    android:layout_marginLeft="@dimen/layoutMargin"
                    android:layout_marginRight="@dimen/layoutMargin"
                    android:background="@drawable/gradient"
                    android:onClick="addTenForGryffindor"
                    android:text="@string/quaffle"
                    android:textColor="@color/textColor" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginTopBottom"
                    android:layout_marginLeft="@dimen/layoutMargin"
                    android:layout_marginRight="@dimen/layoutMargin"
                    android:background="@drawable/gradient"
                    android:onClick="penaltyForGryffindor"
                    android:text="@string/penalty"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/imageWidth"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/marginTopBottom"
                android:scaleType="fitXY"
                android:src="@drawable/broomstick" />

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layoutMargin"
                    android:gravity="center"
                    card_view:cardCornerRadius="@dimen/cornerRadius"
                    card_view:cardElevation="@dimen/zero"
                    card_view:cardMaxElevation="@dimen/zero">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/teamImageHeight"
                        android:scaleType="fitXY"
                        android:src="@drawable/slytherin" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layoutMargin"
                    android:layout_marginRight="@dimen/layoutMargin"
                    android:layout_marginBottom="@dimen/marginTopBottom"
                    android:gravity="center"
                    card_view:cardCornerRadius="@dimen/cornerRadius"
                    card_view:cardElevation="@dimen/zero"
                    card_view:cardMaxElevation="@dimen/zero">

                    <TextView
                        android:id="@+id/slytherin_score"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient2"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:text="@string/score"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/scoreSize" />

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/fouls_slytherin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginTopBottom"
                    android:layout_marginLeft="@dimen/layoutMargin"
                    android:layout_marginRight="@dimen/layoutMargin"
                    android:paddingBottom="@dimen/paddingText"
                    android:paddingTop="@dimen/paddingText"
                    android:background="@drawable/gradient2"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="Fouls: "
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginTopBottom"
                    android:layout_marginLeft="@dimen/layoutMargin"
                    android:layout_marginRight="@dimen/layoutMargin"
                    android:layout_marginTop="@dimen/layoutMargin"
                    android:background="@drawable/gradient2"
                    android:onClick="addSnitchForSlytherin"
                    android:text="@string/snitch"
                    android:textColor="@color/textColor" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginTopBottom"
                    android:layout_marginLeft="@dimen/layoutMargin"
                    android:layout_marginRight="@dimen/layoutMargin"
                    android:background="@drawable/gradient2"
                    android:onClick="addTenForSlytherin"
                    android:text="@string/quaffle"
                    android:textColor="@color/textColor" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginTopBottom"
                    android:layout_marginLeft="@dimen/layoutMargin"
                    android:layout_marginRight="@dimen/layoutMargin"
                    android:background="@drawable/gradient2"
                    android:onClick="penaltyForSlytherin"
                    android:text="@string/penalty"
                    android:textColor="@color/textColor" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/resetMargin"
            android:onClick="resetScore"
            android:text="@string/reset"
            android:textColor="@color/textColor" />

    </RelativeLayout>


</ScrollView>